--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: hypothesis-testing-service
+    name: hypostats-webservice
     env: docker
     dockerfilePath: Dockerfile
-    startCommand: python app.py
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
